--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,7 @@
   "imports": {
     "@concepts/": "./src/concepts/",
     "@google/generative-ai": "npm:@google/generative-ai@^0.24.1",
+    "@google-cloud/storage": "npm:@google-cloud/storage@7.7.0",
     "@utils/": "./src/utils/",
     "mongodb": "npm:mongodb@^6.3.0",
     "jsr:@std/assert": "jsr:@std/assert@^0.223.0"
