--- a/deno.json
+++ b/deno.json
@@ -5,7 +5,8 @@
     "@google-cloud/storage": "npm:@google-cloud/storage@7.7.0",
     "@utils/": "./src/utils/",
     "mongodb": "npm:mongodb@^6.3.0",
-    "jsr:@std/assert": "jsr:@std/assert@^0.223.0"
+    "jsr:@std/assert": "jsr:@std/assert@^0.223.0",
+    "pdf-parse": "npm:pdf-parse@^1.1.1"
   },
   "tasks": {
     "concepts": "deno run --allow-net --allow-read --allow-sys --allow-env src/concept_server.ts --port 8000 --baseUrl /api"
