synced fork w/ concept backend manually

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,10 @@
 {
   "imports": {
     "@concepts/": "./src/concepts/",
+    "@concepts": "./src/concepts/concepts.ts",
+    "@test-concepts": "./src/concepts/test_concepts.ts",
+    "@engine": "./src/engine/mod.ts",
+    "@syncs": "./src/syncs/syncs.ts",
     "@google/generative-ai": "npm:@google/generative-ai@^0.24.1",
     "@google-cloud/storage": "npm:@google-cloud/storage@7.7.0",
     "@utils/": "./src/utils/",
@@ -9,6 +13,14 @@
     "pdf-parse": "npm:pdf-parse@^1.1.1"
   },
   "tasks": {
-    "concepts": "deno run --allow-net --allow-read --allow-sys --allow-env src/concept_server.ts --port 8000 --baseUrl /api"
+    "start": "deno run --allow-net --allow-write --allow-read --allow-sys --allow-env src/main.ts",
+    "concepts": "deno run --allow-net --allow-read --allow-sys --allow-env src/concept_server.ts --port 8000 --baseUrl /api",
+    "import": "deno run --allow-read --allow-write --allow-env src/utils/generate_imports.ts",
+    "build": "deno run import"
+  },
+  "lint": {
+    "rules": {
+      "exclude": ["no-import-prefix", "no-unversioned-import"]
+    }
   }
 }
